--- a/module-1/sml-1-case-study-python.qmd
+++ b/module-1/sml-1-case-study-python.qmd
@@ -15,7 +15,10 @@ editor: visual
 ---
 
 ```{r setup, include=FALSE}
-set.seed(20250706) # so the results are readily reproducible
+reticulate::py_install("pandas")
+reticulate::py_install("numpy")
+reticulate::py_install("statsmodels")
+reticulate::py_install("scikit-learn")
 ```
 
 ## 1. PREPARE
@@ -50,71 +53,75 @@ As highlighted in [Chapter 6 of Data Science in Education Using R](https://data
 
 > A **Project** is the home for all of the files, images, reports, and code that are used in any given project
 
-Since we are working from an R project cloned from [GitHub](https://github.com/laser-institute), a Project has already been set up for you as indicated by the `.Rproj` file in your main directory in the Files pane. Instead, we will focus on getting our project set up withe the requisite packages we'll need for analysis.
+Since we are working from a Python project cloned from [GitHub](https://github.com/laser-institute), a Project has already been set up for you. Instead, we will focus on getting our project set up with the requisite Python Libraries we'll need for analysis.
 
-**Packages**, sometimes called libraries, are shareable collections of R code that can contain functions, data, and/or documentation and extend the functionality of R. You can always check to see which packages have already been installed and loaded into RStudio Cloud by looking at the the Files, Plots, & Packages Pane in the lower right-hand corner.
+**Libraries**, are shareable collections of Python code that can contain functions, data, and/or documentation and extend the functionality of the base Python language. Libraries are loaded with the "import" keyword often with a namespace; e.g., `import pandas as pd`. 
 
-Two packages we'll use extensively throughout these learning labs are the {tidyverse} and {tidymodels} packages.
+#### pandas 🐼
 
-#### tidyverse 📦
+![](img/Pandas_logo.png){width="20%"}
 
-![](img/tidyverse.png){width="20%"}
+One of the core libraries we’ll use throughout LASER is **`pandas`**, Python’s go-to toolkit for working with data in tabular form. The `pandas` library provides powerful, flexible data structures — especially the `DataFrame`, which is similar to R’s `tibble`.
 
-One package that we'll be using extensively throughout LASER is the {tidyverse} package. Recall from earlier tutorials that the {tidyverse} package is actually a [collection of R packages](https://www.tidyverse.org/packages) designed for reading, wrangling, and exploring data and which all share an underlying design philosophy, grammar, and data structures. These shared features are sometimes "tidy data principles."
+With `pandas`, you can:
+- read and write data from a variety of formats (like CSV, Excel, and SQL),
+- filter, reshape, and summarize datasets,
+- and perform complex data transformations with concise, readable code.
 
-Click the green arrow in the right corner of the "code chunk" that follows to load the {tidyverse} library.
+Think of `pandas` as the Python equivalent of the tidyverse’s **data wrangling** toolkit.
 
-```{r}
-library(tidyverse)
+To get started, you can import the library like this:
+
+```{python}
+#| eval: false
+import pandas as pd
 ```
 
-#### tidymodels
 
-[![](img/tidymodels.png){width="20%"}](https://www.tidymodels.org/)
+#### scikit-learn 🤖
 
-The [tidymodels](https://www.tidymodels.org/) package is a "meta-package" for modeling and statistical analysis that shares the underlying design philosophy, grammar, and data structures of the [tidyverse](https://www.tidyverse.org/). It includes a core set of packages that are loaded on startup and contains tools for:
+[![](img/sklearn_logo.png){width="20%"}](https://scikit-learn.org/)
 
--   data splitting and pre-processing;
+[`scikit-learn`](https://scikit-learn.org/) is Python’s most widely used library for machine learning and statistical modeling. It provides a consistent and intuitive API for building and evaluating models — similar in spirit to R’s `tidymodels`.
 
--   model selection, tuning, and evaluation;
+With `scikit-learn`, you can:
+- split data into training and test sets,
+- preprocess features with pipelines,
+- train a wide variety of models (regression, classification, clustering, etc.),
+- tune hyperparameters and evaluate performance.
 
--   feature selection and variable importance estimation;
+It’s designed to be modular and composable, making it easy to build repeatable workflows that integrate cleanly with `pandas` and other scientific Python libraries.
 
--   as well as other functionality.
 
 #### **👉 Your Turn** **⤵**
+In addition to pandas and sci-kit learn (sklearn) we will also use the statsmodels library to do regression analysis with its formula interface.
 
-In addition to the {tidyverse} package, we'll also be using {tidymodels} and the lightweight but highly useful {janitor} package to help with some data cleaning tasks. Use the code chunk below to load both tidymodels and janitor.
+Use the code chunk below to load pandas and statsmodels.
 
-```{r}
-
-
-
+```{python}
+import pandas as pd 
+import statsmodels.formula.api as smf
 ```
 
-As a tip, remember to use the `library()` function to load these packages. After you've done that, click the green arrow to run the code chunk. If you see a bunch of messages (not anything labeled as an error), you are good to go! These messages mean the packages loaded correctly.
+Tip: Avoid using wildcard imports (like `from module import *`) when loading a library. Instead, import the full library or use a clear alias (e.g., `import statsmodels.formula.api as smf`). This helps keep your namespace clean, avoids conflicts, and makes your code easier to read and maintain.
 
 ### Loading data
 
-Next, we'll read in data. We'll use the `read_csv()` function to load the data file.
+Next, we'll read in data. We'll use the pandas `read_csv()` function to load the data file.
 
 For now, please read in the \`ipeds-all-title-9-2022-data.csv\` file. Use the `read_csv()` function to do this, paying attention to where those files are located relative to this case study file – in the data folder!
 
-```{r}
-ipeds <- read_csv("data/ipeds-all-title-9-2022-data.csv")
+```{python}
+ipeds_df = pd.read_csv("data/ipeds-all-title-9-2022-data.csv")
+ipeds_df.columns
 ```
 
-We'll then use a handy function from janitor, `clean_names()`. It does what it seems like it should - it cleans the names of variables, making them easy to view and type. Run this next code chunk.
-
-```{r}
-ipeds <- janitor::clean_names(ipeds)
-```
 
 #### **👉 Your Turn** **⤵**
 
 In the chunk below, examine the data set using a function or means of your choice (such as just *printing* the data set by typing its name or using the `glimpse()` function). Do this in the code chunk below! Note its dimensions --- especially how many rows it has!
 
-```{r}
+```{python}
 
 ```
 
@@ -128,32 +135,38 @@ Write down a few observations after inspecting the data - and any all observatio
 
 ## 2. WRANGLE
 
-Even though we cleaned the names to make them easier to view and type (thanks, `clean_names()`), they are still pretty long.
+These code names are pretty long. Let's clean them up by mapping them and then selecting only the columns we need.
 
-The code chunk below uses a very handy function, `select()`. This allows you to simultaneously choose and rename variables, returning a data frame with only the variables you have selected --- named as you like. For now, we'll just run this code. Later in your analyses, you'll almost certainly use `select()` to get a more manageable dataset.
 
-```{r}
-ipeds <- ipeds %>% 
-    select(name = institution_name, 
-           title_iv = hd2022_postsecondary_and_title_iv_institution_indicator, # is the university a title IV university?
-           carnegie_class = hd2022_carnegie_classification_2021_basic, # which carnegie classification
-           state = hd2022_state_abbreviation, # state
-           total_enroll = drvef2022_total_enrollment, # total enrollment
-           pct_admitted = drvadm2022_percent_admitted_total, # percentage of applicants admitted
-           n_bach = drvc2022_bachelors_degree, # number of students receiving a bachelor's degree
-           n_mast = drvc2022_masters_degree, # number receiving a master's
-           n_doc = drvc2022_doctors_degree_research_scholarship, # number receive a doctoral degree
-           tuition_fees = drvic2022_tuition_and_fees_2021_22, # total cost of tuition and fees
-           grad_rate = drvgr2022_graduation_rate_total_cohort, # graduation rate
-           percent_fin_aid = sfa2122_percent_of_full_time_first_time_undergraduates_awarded_any_financial_aid, # percent of students receive financial aid
-           avg_salary = drvhr2022_average_salary_equated_to_9_months_of_full_time_instructional_staff_all_ranks) # average salary of instructional staff
+```{python}
+#| eval: true
+
+column_map = {
+    'institution name': 'name',
+    'HD2022.Postsecondary and Title IV institution indicator': 'title_iv',  # is the university a title IV university?
+    'HD2022.Carnegie Classification 2021: Basic': 'carnegie_class',  # which carnegie classification
+    'HD2022.State abbreviation': 'state',  # state
+    'DRVEF2022.Total  enrollment': 'total_enroll',  # total enrollment
+    'DRVADM2022.Percent admitted - total': 'pct_admitted',  # percentage of applicants admitted
+    "DRVC2022.Bachelor's degree": 'n_bach',  # number of students receiving a bachelor's degree
+    "DRVC2022.Master's degree": 'n_mast',  # number of students receiving a master's degree
+    "DRVC2022.Doctor's degree - research/scholarship": 'n_doc',  # number receive a doctoral degree
+    'DRVIC2022.Tuition and fees, 2021-22': 'tuition_fees',  # total cost of tuition and fees
+    'DRVGR2022.Graduation rate, total cohort': 'grad_rate',  # graduation rate
+    'SFA2122.Percent of full-time first-time undergraduates awarded any financial aid': 'percent_fin_aid',  # percent of students receive financial aid
+    'DRVHR2022.Average salary equated to 9 months of full-time instructional staff - all ranks': 'avg_salary'  # average salary of instructional staff
+}
+
+ipeds_df = ipeds_df.rename(columns=column_map)  # first map column names ... 
+ipeds_df = ipeds_df[column_map.values()]  # then select the columns it mapped.
 ```
 
-A useful function for exploring data is `count()`; it does what it sounds like! It counts how many times values for a variable appear.
+A useful method for exploring data is `.value_counts()`; it does what it sounds like! It operates on a column of a DataFrame and counts how many times values for a variable appear.
 
-```{r}
-ipeds %>% 
-    count(title_iv)
+```{python}
+ipeds_df['title_iv'].value_counts()
+
+#if you want to know proportions of each value you can use the normalize=True parameter; e.g, `.value_counts(normalize=True)`
 ```
 
 This suggests we may wish to filter the 30 non-Title IV institutions --- something we'll do shortly.
@@ -162,20 +175,21 @@ This suggests we may wish to filter the 30 non-Title IV institutions --- somethi
 
 Can you count another variable? Pick another (see the code chunk two above) and add a count below. While simple, counting up different values in our data can be very informative (and can often lead to further explorations)!
 
-```{r}
+```{python}
 
 ```
 
 ### Filtering
 
-`filter()` is a very handy function that is part of the tidyverse; it filters to *include* (or *exclude*) observations in your data based upon logical conditions (e.g., `==`, `>`, `<=`, etc.). See more [here](https://dplyr.tidyverse.org/reference/filter.html) if interested.
+`.query()` is a very handy pandas method; it filters to *include* (or *exclude*) observations in your data based upon logical conditions (e.g., `==`, `>`, `<=`, etc.). See more [here](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.query.html) if interested.
 
 Below, we filter the data to include only Title IV postsecondary institutions.
 
-```{r}
-ipeds <- ipeds %>% 
-    filter(title_iv == "Title IV postsecondary institution")
+```{python}
+ipeds_df = ipeds_df.query('title_iv == "Title IV postsecondary institution"')  # filter to Title IV
 ```
+
+Consider checking that this filtering worked by running `.value_counts()` again on the `title_iv` column.
 
 #### **👉 Your Turn** **⤵**
 
@@ -189,9 +203,9 @@ In other words, can you exclude those institutions with a value for the `carnegi
 
 #### **👉 Your Turn** **⤵**
 
-We're cruising! Let's take another peak at our data - using `glimpse()` or another means of your choosing below.
+We're cruising! Let's take another peak at our data - using `.head()` or another means of your choosing below.
 
-```{r}
+```{python}
 
 ```
 
@@ -199,12 +213,16 @@ We're cruising! Let's take another peak at our data - using `glimpse()` or anoth
 
 One key step in most analyses is to explore the data. Here, we conduct an exploratory data analysis with the IPEDS data, focusing on the key outcome of graduate rate.
 
-Below, we use the ggplot2 package (part of the tidyverse) to visualize the *spread* of the values of our dependent variable, `grad_rate`, which represents institutions' graduation rate. There is a *lot* to ggplot2, and data visualizations are not the focus of this module, but [this web page](https://ggplot2.tidyverse.org/) has a lot of information you can use to learn more, if you are interested. ggplot2 is fantastic for creating publication-ready visualizations!
+Below, we use the matplotlib package (part of base Python) to visualize the *spread* of the values of our dependent variable, `grad_rate`, which represents institutions' graduation rate. There is a *lot* to matplotlib, and data visualizations are not the focus of this module. While useful for quickly validating data, consider exploring more advanced Python data visualization libraries such as [seaborn](https://seaborn.pydata.org/) and [plotly](https://plotly.com/).
 
-```{r}
-ipeds %>% 
-    ggplot(aes(x = grad_rate)) +
-    geom_histogram()
+```{python}
+import matplotlib.pyplot as plt 
+
+plt.style.use('ggplot')  # optional for beauty
+ipeds_df['grad_rate'].hist(bins=30, edgecolor='white', color='skyblue')
+plt.xlabel('Graduation Rate (%)')
+plt.ylabel('Number of Institutions')
+plt.show()
 ```
 
 What do you notice about this graph -- and about graduation rate?
